Video wider in portrait

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         max-height: 1080px;
       }
       
+      @media (orientation: portrait) {
+        video {
+          width: 120vw;
+        }
+      }
+      
       video img {
         width: 100%;
         height: 100%;
